# envpod

./: .gitignore  README.md  envsync.yaml.example  pyproject.toml  requirements.txt
envbox/: main.py
tests/: test_main.py
